# flask-forge-template

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  auth.md  cli.md  configuration.md  deployment.md  development.md  frontend.md  index.md  rbac.md  security.md  testing.md
scripts/: audit.sh  bootstrap.ps1  bootstrap.sh  format.sh  init_db.sh  lint.sh  test.sh
src/: app.py  cli.py  config.py  models.py
src/api/: admin.py  auth.py  health.py  users.py
src/api/v1/: __init__.py  health.py
src/api/v1/admin/: routes.py
src/api/v1/auth/: routes.py  schemas.py  service.py
src/api/v1/users/: models.py  repo.py  routes.py  schemas.py  service.py
src/core/: authz.py  errors.py  logging.py  responses.py  security.py  settings.py
src/db/: base.py  session.py
src/extensions/: __init__.py  cors.py  jwt.py  security_headers.py
src/migrations/: env.py
src/migrations/versions/: 20260227_000001_create_users_table.py  20260227_000002_add_auth_rbac_tables.py
src/utils/: datetime.py  security.py
src/web/: __init__.py  routes.py
src/web/templates/: index.html
tests/: conftest.py  test_admin.py  test_auth.py  test_health.py  test_users.py  test_web.py
